Fix overflow bug

--- a/assets/css/partials/_base.scss
+++ b/assets/css/partials/_base.scss
@@ -79,6 +79,7 @@ hr:after {
 	justify-content: center;
 	align-items: center;
 	background-color: #efbf53;
+	overflow: hidden;
 }
 
 .about {
